Laptop scaling corrections

--- a/DietProject/Categories.ru.resx
+++ b/DietProject/Categories.ru.resx
@@ -61,14 +61,20 @@
   <data name="CategoryTextBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 12pt</value>
   </data>
+  <data name="CategoryTextBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>161, 619</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CategoryTextBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="CategoryTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 29</value>
+    <value>360, 39</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="CategoryTextBox.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="CDeleteButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
@@ -78,8 +84,14 @@
   <data name="CDeleteButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="CDeleteButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>834, 607</value>
+  </data>
+  <data name="CDeleteButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="CDeleteButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 38</value>
+    <value>139, 63</value>
   </data>
   <data name="CDeleteButton.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -96,8 +108,14 @@
   <data name="CAddButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="CAddButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>609, 607</value>
+  </data>
+  <data name="CAddButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="CAddButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 38</value>
+    <value>139, 63</value>
   </data>
   <data name="CAddButton.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -111,8 +129,14 @@
   <data name="CategoriesLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="CategoriesLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>277, 82</value>
+  </data>
+  <data name="CategoriesLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="CategoriesLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>405, 24</value>
+    <value>578, 39</value>
   </data>
   <data name="CategoriesLabel.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -124,13 +148,25 @@
     <value>Segoe UI, 12pt</value>
   </data>
   <data name="CCategoriesListBox.ItemHeight" type="System.Int32, mscorlib">
-    <value>21</value>
+    <value>32</value>
+  </data>
+  <data name="CCategoriesListBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>277, 123</value>
+  </data>
+  <data name="CCategoriesListBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="CCategoriesListBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>405, 235</value>
+    <value>577, 388</value>
   </data>
   <data name="CCategoriesListBox.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>10, 25</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1143, 750</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2893,6 +2929,9 @@
         AAAAoQAAALMAAAC2AAAAMwAAAAAAAAAAAAAAAAAAAADwjwAA8I8AAPAvAADwLwAA8C8AAPCPAADwjwAA
         8I8AAPCHAADgJwAA5jcAAOA3AADgJwAA4CcAAOAHAADgDwAA
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Категории продуктов</value>
