--- a/DietProject/TaskDataInput.ru.resx
+++ b/DietProject/TaskDataInput.ru.resx
@@ -68,8 +68,14 @@
   <data name="DTUnselectButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DTUnselectButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>544, 393</value>
+  </data>
+  <data name="DTUnselectButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="DTUnselectButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>39, 30</value>
+    <value>56, 50</value>
   </data>
   <data name="DTUnselectButton.Text" xml:space="preserve">
     <value>&lt;&lt;</value>
@@ -83,8 +89,14 @@
   <data name="DTSelectButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DTSelectButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>544, 313</value>
+  </data>
+  <data name="DTSelectButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="DTSelectButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>40, 30</value>
+    <value>57, 50</value>
   </data>
   <data name="DTSelectButton.Text" xml:space="preserve">
     <value>&gt;&gt;</value>
@@ -98,8 +110,14 @@
   <data name="TDSolveButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="TDSolveButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>469, 628</value>
+  </data>
+  <data name="TDSolveButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="TDSolveButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 38</value>
+    <value>204, 63</value>
   </data>
   <data name="TDSolveButton.Text" xml:space="preserve">
     <value>Решить задачу</value>
@@ -110,8 +128,14 @@
   <data name="DietProductsLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DietProductsLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>607, 202</value>
+  </data>
+  <data name="DietProductsLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="DietProductsLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>361, 24</value>
+    <value>515, 39</value>
   </data>
   <data name="DietProductsLabel.Text" xml:space="preserve">
     <value>Продукты рациона</value>
@@ -121,10 +145,16 @@
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="DietProductsListBox.ItemHeight" type="System.Int32, mscorlib">
-    <value>21</value>
+    <value>32</value>
+  </data>
+  <data name="DietProductsListBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>607, 247</value>
+  </data>
+  <data name="DietProductsListBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="DietProductsListBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>361, 193</value>
+    <value>514, 292</value>
   </data>
   <data name="DTProductsNamesLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 12pt</value>
@@ -132,8 +162,14 @@
   <data name="DTProductsNamesLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="DTProductsNamesLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 202</value>
+  </data>
+  <data name="DTProductsNamesLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
+  </data>
   <data name="DTProductsNamesLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>361, 24</value>
+    <value>515, 39</value>
   </data>
   <data name="DTProductsNamesLabel.Text" xml:space="preserve">
     <value>Названия продуктов</value>
@@ -142,16 +178,25 @@
     <value>Segoe UI, 12pt</value>
   </data>
   <data name="DTProductsNamesListBox.ItemHeight" type="System.Int32, mscorlib">
-    <value>21</value>
+    <value>32</value>
+  </data>
+  <data name="DTProductsNamesListBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 247</value>
+  </data>
+  <data name="DTProductsNamesListBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="DTProductsNamesListBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>361, 193</value>
+    <value>514, 292</value>
   </data>
   <data name="PVFromNumericUpDown.Location" type="System.Drawing.Point, System.Drawing">
-    <value>456, 55</value>
+    <value>646, 102</value>
+  </data>
+  <data name="PVFromNumericUpDown.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="PVFromNumericUpDown.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 23</value>
+    <value>100, 31</value>
   </data>
   <data name="TDLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -163,13 +208,22 @@
     <value>NoControl</value>
   </data>
   <data name="TDLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>275, 56</value>
+    <value>387, 99</value>
+  </data>
+  <data name="TDLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="TDLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 21</value>
+    <value>237, 32</value>
   </data>
   <data name="TDLabel.Text" xml:space="preserve">
     <value>Доступный бюджет:</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>10, 25</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1143, 750</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2932,5 +2986,8 @@
         AAAAoQAAALMAAAC2AAAAMwAAAAAAAAAAAAAAAAAAAADwjwAA8I8AAPAvAADwLwAA8C8AAPCPAADwjwAA
         8I8AAPCHAADgJwAA5jcAAOA3AADgJwAA4CcAAOAHAADgDwAA
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
 </root>
