--- a/DietProject/MainScreen.ru.resx
+++ b/DietProject/MainScreen.ru.resx
@@ -66,10 +66,13 @@
     <value>Segoe UI, 12pt</value>
   </data>
   <data name="ButtonToKE.Location" type="System.Drawing.Point, System.Drawing">
-    <value>255, 126</value>
+    <value>364, 226</value>
+  </data>
+  <data name="ButtonToKE.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="ButtonToKE.Size" type="System.Drawing.Size, System.Drawing">
-    <value>313, 48</value>
+    <value>447, 80</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ButtonToKE.TabIndex" type="System.Int32, mscorlib">
@@ -87,11 +90,23 @@
   <data name="ButtonToTS.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="ButtonToTS.Location" type="System.Drawing.Point, System.Drawing">
+    <value>364, 414</value>
+  </data>
+  <data name="ButtonToTS.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
+  </data>
   <data name="ButtonToTS.Size" type="System.Drawing.Size, System.Drawing">
-    <value>313, 48</value>
+    <value>447, 80</value>
   </data>
   <data name="ButtonToTS.Text" xml:space="preserve">
     <value>Ввести исходные данные задачи</value>
+  </data>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>10, 25</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1143, 750</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2854,6 +2869,9 @@
         AAAAoQAAALMAAAC2AAAAMwAAAAAAAAAAAAAAAAAAAADwjwAA8I8AAPAvAADwLwAA8C8AAPCPAADwjwAA
         8I8AAPCHAADgJwAA5jcAAOA3AADgJwAA4CcAAOAHAADgDwAA
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Проектирование рациона питания</value>
